--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,81 @@
     text-decoration: none;
     list-style: none;
 }
-
+ 
 body {
+    color: white;
+    font-family:Roboto, sans-serif;
+}
+
+h1 {
+    font-size: 48px;
+    color: #F9F9F8;
+    font-weight: 900;
+}
+
+a {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+button {
+    color: white;
+    background-color: #3882F6;
+    width: 140px;
+    padding: 8px 35px;
+    border-radius: 10px;
+    border:none;
+    font-size: 18px;
+    margin-top: 8px;
     
+}
+.hero {
+    background-color: #1F2937;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 18px;
+    margin: auto;
+    width: 70%;
+    
+}
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    gap: 18px;
+    
+}
+
+.logo {
+    color: #F9FAF8; 
+    font-size: 24px;
+}
+
+.content {
+    display: flex;
+    justify-content: space-between;
+    margin: 100px auto auto auto;
+    gap: 35px;
+    width: 70%;
+    
+}
+.content-left {
+    margin-bottom: 150px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.content-right {
+    min-width: 50%;
+    background-color: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 150px;
 }
